--- a/experience.html
+++ b/experience.html
@@ -4,178 +4,103 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dhruv Joshi | Experience</title>
-  <link rel="stylesheet" href="style.css" />
   <style>
-    body {
-      font-family: 'Segoe UI', Arial, sans-serif;
-      margin: 0;
-      background: #f4f7fb;
-      color: #232a33;
-    }
-    header nav {
-      background: #273b56;
-      text-align: center;
-      box-shadow: 0 2px 8px rgba(39, 59, 86, 0.03);
-    }
-    header nav ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      display: inline-flex;
-    }
-    header nav ul li {
-      margin: 0 1.5em;
-    }
-    header nav ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 500;
-      padding: 1.3em 0;
-      display: block;
-      transition: color 0.2s;
-    }
-    header nav ul li a:hover {
-      color: #58a4ff;
-      border-bottom: 2px solid #58a4ff;
-    }
-    header nav ul li a.active,
-    header nav ul li a.nav-active {
-      color: #58a4ff !important;
-      border-bottom: 2px solid #58a4ff !important;
-      font-weight: 700 !important;
-    }
-    main {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      min-height: 85vh;
-      padding-top: 48px;
-    }
-    .container {
-      background: #fff;
-      max-width: 1000px;
-      width: 100%;
-      margin: 3em auto 0 auto;
-      border-radius: 16px;
-      box-shadow: 0 4px 28px rgba(40, 60, 90, 0.11),
-        0 1.5px 3.5px rgba(39, 59, 86, 0.04);
-      padding: 3em 3em 2.5em 3em;
-    }
-    h2 {
-      font-size: 2.1em;
-      margin-bottom: 1.2em;
-      letter-spacing: 0.5px;
-    }
-    .exp-group {
-      margin-bottom: 2.2em;
-    }
+    body { font-family: Arial, sans-serif; background: #f4f8fd; margin: 0; }
+    .container { max-width: 700px; margin: 3em auto; background: #fff; padding: 2.2em 2.8em; border-radius: 14px; box-shadow: 0 2px 16px rgba(52,72,100,0.13); }
+    h2 { font-size: 1.6em; margin-bottom: 1.2em; }
+    .exp-group { margin-bottom: 2.2em; }
     .role { font-weight: bold; font-size: 1.13em; color: #203a53; }
     .company { color: #2c406c; font-weight: 500; margin-left: 4px;}
     .dates, .loc { color: #7b8a97; font-size: 1em; margin-left: 6px;}
     .point, .intern-point { margin-left: 0; margin-top: 0.7em; font-size: 1.04em; line-height: 1.75; }
     h3 { font-size: 1.15em; margin-top: 2em; margin-bottom: 0.3em; }
     .section-header { font-weight: bold; margin-top: 2em; color: #285b80; letter-spacing: 0.5px;}
-    footer {
-      background: #273b56;
-      color: #fff;
-      text-align: center;
-      font-size: 0.97em;
-      padding: 0.7em;
-      margin-top: 2em;
-      border-radius: 0 0 8px 8px;
-    }
-    @media (max-width: 1200px) {
-      .container {
-        max-width: 99vw;
-        padding: 1.2em 0.7em 1.5em 0.7em;
-      }
-    }
+    nav { background: #273b56; text-align: center; box-shadow: 0 2px 8px rgba(39, 59, 86, 0.03);}
+    nav ul { list-style: none; padding: 0; margin: 0; display: inline-flex; }
+    nav ul li { margin: 0 1.5em; }
+    nav ul li a { color: #fff; text-decoration: none; font-weight: 500; padding: 1.3em 0; display: block; transition: color 0.2s;}
+    nav ul li a.nav-active,
+    nav ul li a:hover { color: #58a4ff !important; border-bottom: 2px solid #58a4ff !important; font-weight: 700 !important;}
   </style>
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Introduction</a></li>
+        <li><a href="index.html" id="nav-intro">Introduction</a></li>
         <li><a href="experience.html" id="nav-exp">Experience</a></li>
-        <li><a href="projects.html">Professional Projects</a></li>
-        <li><a href="knowledge.html">Knowledge Roadmap</a></li>
-        <li><a href="certificates.html">Certificates & Workshops</a></li>
+        <li><a href="projects.html" id="nav-proj">Professional Projects</a></li>
+        <li><a href="knowledge.html" id="nav-knowl">Knowledge Roadmap</a></li>
+        <li><a href="certificates.html" id="nav-cert">Certificates & Workshops</a></li>
       </ul>
     </nav>
   </header>
   <script>
-    // Highlight "Experience" link when this page loads
     document.addEventListener("DOMContentLoaded", function() {
       var current = document.getElementById("nav-exp");
-      if (current) current.classList.add("active", "nav-active");
+      if (current) current.classList.add("nav-active");
     });
   </script>
-  <main>
-    <div class="container">
-      <h2>Work Experience</h2>
-      <div class="exp-group">
-        <span class="role">ML Engineer - GenAI Systems</span>
-        <span class="company">Jay Analytix, Canada</span>
-        <span class="dates">Jan 2025 – Present</span>
-        <span class="loc">(Contract - Remote)</span>
-        <div class="point">
-          Architected next-gen multimodal GenAI chatbots and call automation solutions integrating Retrieval-Augmented Generation (RAG), hybrid LLM stacks, and real-time inference with Docker & Kubernetes orchestration, deployed for TD Bank, RBC, and Quest Diagnostics – enabling high-velocity support and AI-powered customer journeys at scale (sub-100ms latency, 1,000+ concurrent sessions, 99.2% uptime). Implemented Agile/Scrum workflows for rapid iteration.
-        </div>
-        <div class="point">
-          Applied QLoRA fine-tuning techniques to domain-specific large language models, orchestrating vector database retrieval, Kubernetes-based model serving, and automated agent architectures through CI/CD pipelines to drive significant accuracy improvements and ensure seamless, production-ready adoption of AI solutions for leading fintech and healthcare clients. Collaborated in Agile sprints with cross-functional teams.
-        </div>
+  <div class="container">
+    <h2>Work Experience</h2>
+    <div class="exp-group">
+      <span class="role">ML Engineer - GenAI Systems</span>
+      <span class="company">Jay Analytix, Canada</span>
+      <span class="dates">Jan 2025 – Present</span>
+      <span class="loc">(Contract - Remote)</span>
+      <div class="point">
+        Architected next-gen multimodal GenAI chatbots and call automation solutions integrating Retrieval-Augmented Generation (RAG), hybrid LLM stacks, and real-time inference with Docker & Kubernetes orchestration, deployed for TD Bank, RBC, and Quest Diagnostics – enabling high-velocity support and AI-powered customer journeys at scale (sub-100ms latency, 1,000+ concurrent sessions, 99.2% uptime). Implemented Agile/Scrum workflows for rapid iteration.
       </div>
-      <div class="exp-group">
-        <span class="role">ML Engineer - Healthcare AI</span>
-        <span class="company">Atem, Japan/USA</span>
-        <span class="dates">Mar 2024 – Jan 2025</span>
-        <span class="loc">(Contract - Remote)</span>
-        <div class="point">
-          Developed and deployed high-accuracy cancer detection models (97.7% ROC-AUC) for enterprise healthcare clients using Docker containerization and Kubernetes orchestration, improving early diagnosis and supporting clinical decision-making at scale. Implemented CI/CD pipelines for automated model retraining and validation.
-        </div>
-        <div class="point">
-          Designed automated ML pipelines and dashboards, reducing model deployment latency by 35% and delivering $2M+ in business impact through actionable healthcare analytics.
-        </div>
-      </div>
-      <div class="exp-group">
-        <span class="role">AI Finance Analyst</span>
-        <span class="company">Hemil Joshi & Associates, India</span>
-        <span class="dates">May 2023 – Nov 2023</span>
-        <div class="point">
-          Automated financial reporting workflows using Python and ETL processes, resulting in $180K revenue growth and saving 60+ hours per month. Optimized real-time analytics pipelines, enabling 45% faster decision support for global finance clients through AI/ML-driven insights.
-        </div>
-        <div class="point">
-          Developed NLP sentiment analysis models to analyze financial datasets and inform investment strategies for clients including JPMorgan Chase, Goldman Sachs, NJ Group, and RIL (Reliance Industries Limited).
-        </div>
-      </div>
-      <h3 class="section-header">Internship</h3>
-      <div class="exp-group">
-        <span class="role">Data Analyst Intern</span>
-        <span class="company">AaNeel Technology Solutions Pvt. Ltd., USA</span>
-        <span class="dates">Jan 2023 – Apr 2023</span>
-        <div class="intern-point">
-          Build ETL automation workflows with tools like Selenium, BeautifulSoup (BS4) and Power Query for healthcare datasets used by clients including UnitedHealth Group, CVS Health, and Kaiser Permanente, supporting downstream AI/ML model development.
-        </div>
-        <div class="intern-point">
-          Automate BI dashboards and optimized analytics pipelines that improved clinical reporting and enabled 40% faster, AI-driven decision support for healthcare clients and stakeholders.
-        </div>
-      </div>
-      <div class="exp-group">
-        <span class="role">Python Data Science Intern</span>
-        <span class="company">LogicArt Technologies</span>
-        <span class="dates">Jun 2022 – Dec 2022</span>
-        <div class="intern-point">
-          Build entire ETL with Python and Pandas, ensuring scalable data availability for machine learning initiatives.
-        </div>
-        <div class="intern-point">
-          Improved model accuracy through semi-supervised learning and robust data validation for ML applications.
-        </div>
+      <div class="point">
+        Applied QLoRA fine-tuning techniques to domain-specific large language models, orchestrating vector database retrieval, Kubernetes-based model serving, and automated agent architectures through CI/CD pipelines to drive significant accuracy improvements and ensure seamless, production-ready adoption of AI solutions for leading fintech and healthcare clients. Collaborated in Agile sprints with cross-functional teams.
       </div>
     </div>
-  </main>
-  <footer>
-    <p>©2025 Dhruv Joshi</p>
-  </footer>
+    <div class="exp-group">
+      <span class="role">ML Engineer - Healthcare AI</span>
+      <span class="company">Atem, Japan/USA</span>
+      <span class="dates">Mar 2024 – Jan 2025</span>
+      <span class="loc">(Contract - Remote)</span>
+      <div class="point">
+        Developed and deployed high-accuracy cancer detection models (97.7% ROC-AUC) for enterprise healthcare clients using Docker containerization and Kubernetes orchestration, improving early diagnosis and supporting clinical decision-making at scale. Implemented CI/CD pipelines for automated model retraining and validation.
+      </div>
+      <div class="point">
+        Designed automated ML pipelines and dashboards, reducing model deployment latency by 35% and delivering $2M+ in business impact through actionable healthcare analytics.
+      </div>
+    </div>
+    <div class="exp-group">
+      <span class="role">AI Finance Analyst</span>
+      <span class="company">Hemil Joshi & Associates, India</span>
+      <span class="dates">May 2023 – Nov 2023</span>
+      <div class="point">
+        Automated financial reporting workflows using Python and ETL processes, resulting in $180K revenue growth and saving 60+ hours per month. Optimized real-time analytics pipelines, enabling 45% faster decision support for global finance clients through AI/ML-driven insights.
+      </div>
+      <div class="point">
+        Developed NLP sentiment analysis models to analyze financial datasets and inform investment strategies for clients including JPMorgan Chase, Goldman Sachs, NJ Group, and RIL (Reliance Industries Limited).
+      </div>
+    </div>
+    <h3 class="section-header">Internship</h3>
+    <div class="exp-group">
+      <span class="role">Data Analyst Intern</span>
+      <span class="company">AaNeel Technology Solutions Pvt. Ltd., USA</span>
+      <span class="dates">Jan 2023 – Apr 2023</span>
+      <div class="intern-point">
+        Build ETL automation workflows with tools like Selenium, BeautifulSoup (BS4) and Power Query for healthcare datasets used by clients including UnitedHealth Group, CVS Health, and Kaiser Permanente, supporting downstream AI/ML model development.
+      </div>
+      <div class="intern-point">
+        Automate BI dashboards and optimized analytics pipelines that improved clinical reporting and enabled 40% faster, AI-driven decision support for healthcare clients and stakeholders.
+      </div>
+    </div>
+    <div class="exp-group">
+      <span class="role">Python Data Science Intern</span>
+      <span class="company">LogicArt Technologies</span>
+      <span class="dates">Jun 2022 – Dec 2022</span>
+      <div class="intern-point">
+        Build entire ETL with Python and Pandas, ensuring scalable data availability for machine learning initiatives.
+      </div>
+      <div class="intern-point">
+        Improved model accuracy through semi-supervised learning and robust data validation for ML applications.
+      </div>
+    </div>
+  </div>
 </body>
 </html>
