--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,6 @@
   <title>Dhruv Joshi | Experience</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* ...keep your previous style definitions here... */
     .exp-card { background: #fff; max-width: 1050px; width: 100%; margin: 3em auto 0 auto; border-radius: 16px; box-shadow: 0 4px 28px rgba(40, 60, 90, 0.12), 0 1.5px 3.5px rgba(39, 59, 86, 0.05); padding: 3em 3em 2.3em 3em; }
     .exp-title { font-size: 2.1em; font-weight: 700; margin-bottom: 1.6em; letter-spacing: 0.5px; }
     .job-row { display: flex; flex-wrap: wrap; gap: 16px; align-items: baseline; }
@@ -18,13 +17,18 @@
     .exp-card ul.projects { margin: 0 0 1.5em 1.5em; padding: 0; }
     .exp-card ul.projects li { margin-bottom: 1.1em; font-size: 1.11em; line-height: 1.75; }
     .outcome { color: #21734c; font-weight: 540; font-size: 1.02em; }
-    .tech-stack { font-size: 0.95em; color: #5a6c7d; margin: 0.8em 0 1em 0; font-style: italic; }
+    .extra-point { color: #295e7d; font-style: italic; padding-left: 0.8em;}
     hr { border: none; height: 1px; background: #e3e9f2; margin-top: 2em; margin-bottom: 2em; }
     @media (max-width: 1150px) {
       .exp-card { max-width: 99vw; padding: 1.2em 0.6em 2em 0.6em; }
       .exp-title { font-size: 1.3em; }
     }
-    /* ...navigation styles (keep as-is)... */
+    header nav { background: #273b56; text-align: center; box-shadow: 0 2px 8px rgba(39, 59, 86, 0.03);}
+    header nav ul { list-style: none; padding: 0; margin: 0; display: inline-flex; }
+    header nav ul li { margin: 0 1.5em; }
+    header nav ul li a { color: #fff; text-decoration: none; font-weight: 500; padding: 1.3em 0; display: block; transition: color 0.2s;}
+    header nav ul li a.active { color: #58a4ff; border-bottom: 2px solid #58a4ff; font-weight: 700; }
+    header nav ul li a:hover { color: #58a4ff; border-bottom: 2px solid #58a4ff;}
   </style>
 </head>
 <body>
@@ -39,11 +43,9 @@
       </ul>
     </nav>
   </header>
-
   <main>
     <div class="exp-card">
       <div class="exp-title">Professional Experience</div>
-
       <!-- Jay Analytix -->
       <div class="job-block">
         <div class="job-row">
@@ -52,34 +54,15 @@
           <div class="location">Contract - Remote</div>
           <div class="dates">Jan 2025 – Present</div>
         </div>
-        <p class="tech-stack">
-          <strong>Tech Stack:</strong> GPT-4, LangChain, Docker, Kubernetes, Azure OpenAI, GCP GKE, ElevenLabs, QLoRA/LoRA, CI/CD, Python, PyTorch, LangGraph, Agile/Scrum
-        </p>
         <ul class="projects">
-          <li>
-            <span class="project-title">GenAI Multilingual Chatbot Platform:</span>
-            Architected next-gen multimodal chatbots and call automation integrating Retrieval-Augmented Generation (RAG), hybrid LLM stacks, and real-time inference, serving TD Bank, RBC, and Quest Diagnostics.
-            <br/><span class="outcome">Deployed with Docker & Kubernetes, enabled sub-100ms latency and 1,000+ concurrent sessions, achieving 99.2% uptime. Implemented Agile/Scrum for rapid feature iteration and translation at scale (150+ languages, TTS/STT).</span>
-          </li>
-          <li>
-            <span class="project-title">Domain-Specific LLM Optimization:</span>
-            Applied QLoRA fine-tuning to custom LLMs and orchestrated vector database retrieval, Kubernetes-based model serving, and automated agent workflows through CI/CD pipelines for fintech & healthcare clients.
-            <br/><span class="outcome">Drove measurable accuracy gains and seamless production deployment. Collaborated in Agile sprints with cross-functional teams—reducing user support issues by 22%.</span>
-          </li>
-          <li>
-            <span class="project-title">Live Call GenAI System:</span>
-            Engineered real-time AI for live customer calls, integrating streaming audio with LLMs and WebSockets.
-            <br/><span class="outcome">Launched hybrid MLOps architecture—Docker containers, Kubernetes orchestration, automated testing and monitoring frameworks (LangGraph). Delivered 99.2% uptime and scalable deployments on Azure/GCP.</span>
-          </li>
-          <li>
-            <span class="project-title">Intent Detection Optimization:</span>
-            Fine-tuned QLoRA/LoRA models, elevating support resolution speed by 35%.
-            <br/><span class="outcome">Applied parameter-efficient tuning (model quantization, adaptive learning rate) for accurate, fast inference at scale.</span>
-          </li>
+          <li>Architected next-gen multimodal GenAI chatbots and call automation solutions integrating Retrieval-Augmented Generation (RAG), hybrid LLM stacks, and real-time inference with Docker & Kubernetes orchestration, deployed for TD Bank, RBC, and Quest Diagnostics – enabling high-velocity support and AI-powered customer journeys at scale (sub-100ms latency, 1,000+ concurrent sessions, 99.2% uptime). Implemented Agile/Scrum workflows for rapid iteration.</li>
+          <li>Applied QLoRA fine-tuning techniques to domain-specific large language models, orchestrating vector database retrieval, Kubernetes-based model serving, and automated agent architectures through CI/CD pipelines to drive significant accuracy improvements and ensure seamless, production-ready adoption of AI solutions for leading fintech and healthcare clients. Collaborated in Agile sprints with cross-functional teams.</li>
+          <li class="extra-point">Built asynchronous microservices for rapid NLU/NLG in 150+ languages and developed auto-scaling endpoint monitoring with Prometheus and Grafana.</li>
+          <li class="extra-point">Integrated real-time speech-to-text/speech synthesis APIs (Azure, ElevenLabs) for enhanced conversational experience.</li>
+          <li class="extra-point">Introduced automated A/B testing pipelines for bot dialog strategies, increasing resolution rates by 13%.</li>
         </ul>
       </div>
       <hr />
-
       <!-- Atem -->
       <div class="job-block">
         <div class="job-row">
@@ -88,24 +71,14 @@
           <div class="location">Contract - Remote</div>
           <div class="dates">Mar 2024 – Jan 2025</div>
         </div>
-        <p class="tech-stack">
-          <strong>Tech Stack:</strong> Python, Docker, Kubernetes, Tableau, Azure ML, Advanced Feature Engineering, Imputation, CI/CD Pipelines
-        </p>
         <ul class="projects">
-          <li>
-            <span class="project-title">Cancer Detection Platform:</span>
-            Developed and deployed high-accuracy cancer detection models (97.7% ROC-AUC) for enterprise healthcare clients.
-            <br/><span class="outcome">Used Docker containerization and Kubernetes orchestration, improving early diagnosis at scale. Implemented CI/CD pipelines for model retraining, monitoring, and clinical validation, delivering $2M+ business impact.</span>
-          </li>
-          <li>
-            <span class="project-title">Automated ML & Reporting Dashboards:</span>
-            Designed automated ML pipelines and dynamic Tableau dashboards for real-time stakeholder insight.
-            <br/><span class="outcome">Reduced deployment latency by 35%. Enabled scientific storytelling and ops feedback for non-technical users. Data insights accelerated decision-making in clinical ops.</span>
-          </li>
+          <li>Developed and deployed high-accuracy cancer detection models (97.7% ROC-AUC) for enterprise healthcare clients using Docker containerization and Kubernetes orchestration, improving early diagnosis and supporting clinical decision-making at scale. Implemented CI/CD pipelines for automated model retraining and validation.</li>
+          <li>Designed automated ML pipelines and dashboards, reducing model deployment latency by 35% and delivering $2M+ in business impact through actionable healthcare analytics.</li>
+          <li class="extra-point">Introduced SHAP/LIME model explainability for clinical transparency and compliance.</li>
+          <li class="extra-point">Led the integration of synthetic data simulation (using GANs) to address class imbalance and enhance rare-cancer detection.</li>
         </ul>
       </div>
       <hr />
-
       <!-- Hemil Joshi & Associates -->
       <div class="job-block">
         <div class="job-row">
@@ -114,24 +87,14 @@
           <div class="location">On-site</div>
           <div class="dates">May 2023 – Nov 2023</div>
         </div>
-        <p class="tech-stack">
-          <strong>Tech Stack:</strong> Python, ETL, Power BI, Azure Cognitive Services, NLP, Automated Analytics
-        </p>
         <ul class="projects">
-          <li>
-            <span class="project-title">Automated Financial Reporting & ETL:</span>
-            Automated financial reporting using Python and ETL processes, optimizing analytics pipelines for global finance clients (JPMorgan Chase, Goldman Sachs, NJ Group, RIL).
-            <br/><span class="outcome">Achieved $180K revenue growth and saved 60+ hours/month. Enabled 45% faster decision support using AI/ML-driven insights and real-time Power BI dashboards.</span>
-          </li>
-          <li>
-            <span class="project-title">NLP Sentiment Analysis for Investment:</span>
-            Developed sentiment analysis models to inform financial strategy and investment.
-            <br/><span class="outcome">Empowered clients with automated sentiment tracking using Azure Cognitive Services, improving investment outcomes and executive decision-making.</span>
-          </li>
+          <li>Automated financial reporting workflows using Python and ETL processes, resulting in $180K revenue growth and saving 60+ hours per month. Optimized real-time analytics pipelines, enabling 45% faster decision support for global finance clients through AI/ML-driven insights.</li>
+          <li>Developed NLP sentiment analysis models to analyze financial datasets and inform investment strategies for clients including JPMorgan Chase, Goldman Sachs, NJ Group, and RIL (Reliance Industries Limited).</li>
+          <li class="extra-point">Built dashboard reporting solutions for C-level stakeholders with Power BI, supporting financial compliance and forecasting.</li>
+          <li class="extra-point">Led time series forecasting models (ARIMA/Prophet) to improve revenue planning accuracy.</li>
         </ul>
       </div>
       <hr />
-
       <!-- AaNeel Technology Solutions -->
       <div class="job-block">
         <div class="job-row">
@@ -140,19 +103,13 @@
           <div class="location">On-site</div>
           <div class="dates">Jan 2023 – Apr 2023</div>
         </div>
-        <p class="tech-stack">
-          <strong>Tech Stack:</strong> Selenium, BeautifulSoup, Power Query, ETL, BI, Python
-        </p>
         <ul class="projects">
-          <li>
-            <span class="project-title">Healthcare BI & ETL Automation:</span>
-            Built ETL automation workflows for healthcare datasets (clients: UnitedHealth Group, CVS Health, Kaiser Permanente).
-            <br/><span class="outcome">Automated BI dashboards and analytics pipelines, improving clinical reporting and enabling 40% faster, AI-driven decision support for stakeholders and care teams.</span>
-          </li>
+          <li>Build ETL automation workflows with tools like Selenium, BeautifulSoup (BS4) and Power Query for healthcare datasets used by clients including UnitedHealth Group, CVS Health, and Kaiser Permanente, supporting downstream AI/ML model development.</li>
+          <li>Automate BI dashboards and optimized analytics pipelines that improved clinical reporting and enabled 40% faster, AI-driven decision support for healthcare clients and stakeholders.</li>
+          <li class="extra-point">Reduced manual reporting errors by implementing dynamic validation rules and modular pipeline design.</li>
         </ul>
       </div>
       <hr />
-
       <!-- LogicArt Technologies -->
       <div class="job-block">
         <div class="job-row">
@@ -161,22 +118,13 @@
           <div class="location">On-site</div>
           <div class="dates">Jun 2022 – Dec 2022</div>
         </div>
-        <p class="tech-stack">
-          <strong>Tech Stack:</strong> Python, Pandas, NumPy, Semi-supervised learning, Data Validation, EDA
-        </p>
         <ul class="projects">
-          <li>
-            <span class="project-title">ETL and Scalable ML Pipeline:</span>
-            Built enterprise-grade ETL with Python and Pandas, ensuring scalable data availability for machine learning initiatives.
-            <br/><span class="outcome">Improved model accuracy with semi-supervised learning and advanced data validation. Reduced processing errors, boosted analytics impact for business clients.</span>
-          </li>
+          <li>Build entire ETL with Python and Pandas, ensuring scalable data availability for machine learning initiatives.</li>
+          <li>Improved model accuracy through semi-supervised learning and robust data validation for ML applications.</li>
+          <li class="extra-point">Developed modular data cleaning modules, reducing data prep time for new ML projects.</li>
         </ul>
       </div>
     </div>
   </main>
-
-  <footer>
-    <p>©2025 Dhruv Joshi</p>
-  </footer>
 </body>
 </html>
