--- a/index.html
+++ b/index.html
@@ -160,26 +160,16 @@
       <h1>Dhruv Joshi</h1>
 
       <div class="professional-summary">
-        <strong
-          >AI Engineer | ML Engineer | Data Scientist | Gen-AI Engineer</strong
-        >
-        with proven expertise deploying production-grade AI systems that drive
-        measurable business outcomes. Currently engineering multilingual GenAI
-        chatbots and real-time conversational AI achieving
-        <strong>35% efficiency improvements</strong> and serving
+        <strong>AI Engineer | ML Engineer | Data Scientist | GenAI Engineer</strong>
+        with 4+ years of experience architecting and deploying production-grade AI systems that deliver measurable business impact in GenAI, healthcare, and finance. Currently engineering multilingual GenAI chatbots and real-time conversational AI, driving 
+        <strong>35% efficiency improvements</strong> and supporting
         <strong>1,000+ concurrent users</strong> across enterprise clients.
-        Specialized in end-to-end machine learning pipelines—from statistical
-        modeling and feature engineering to MLOps deployment on Azure and GCP
-        cloud platforms. Track record includes developing cancer risk
-        prediction models with <strong>95.7% accuracy</strong> processing
-        50,000+ patient records, delivering <strong>$180K revenue growth</strong>
-        through customer analytics, and building NLP sentiment analysis systems
-        processing 25,000+ interactions monthly. Expert in transforming complex
-        data challenges into scalable AI solutions using Python, deep learning
-        frameworks, and modern MLOps practices. Passionate about leveraging
-        cutting-edge AI technologies—including GPT-4, LangChain, and model
-        fine-tuning—to solve real-world problems across healthcare, finance,
-        and customer experience domains.
+        Specialized in end-to-end machine learning pipelines—from statistical modeling and feature engineering to MLOps deployments on Azure and GCP cloud platforms. Proven track record developing cancer risk prediction models with 
+        <strong>95.7% accuracy</strong> and processing 
+        <strong>50,000+ patient records</strong>, as well as delivering
+        <strong>$180K revenue growth</strong> through customer analytics and building NLP sentiment analysis systems for 
+        <strong>25,000+ interactions monthly</strong>.
+        Expert at transforming complex data challenges into scalable AI solutions using Python, deep learning frameworks, and modern MLOps practices. Passionate about leveraging advanced AI technologies—including GPT-4, LangChain, LLM fine-tuning, and RAG architectures—to solve real-world problems and empower innovation across healthcare, finance, and customer experience domains.
       </div>
 
       <h2>Contact Details</h2>
