--- a/index.html
+++ b/index.html
@@ -159,23 +159,18 @@
     <div class="profile-card">
       <h1>Dhruv Joshi</h1>
 
-      <div class="professional-summary">
-        <strong>AI Engineer | ML Engineer | Data Scientist | GenAI Engineer</strong>
-        with 4+ years of experience architecting and deploying production-grade AI systems that deliver measurable business impact in GenAI, healthcare, and finance. Currently engineering multilingual GenAI chatbots and real-time conversational AI, driving 
-        <strong>35% efficiency improvements</strong> and supporting
-        <strong>1,000+ concurrent users</strong> across enterprise clients.
-        Specialized in end-to-end machine learning pipelines—from statistical modeling and feature engineering to MLOps deployments on Azure and GCP cloud platforms. Proven track record developing cancer risk prediction models with 
-        <strong>95.7% accuracy</strong> and processing 
-        <strong>50,000+ patient records</strong>, as well as delivering
-        <strong>$180K revenue growth</strong> through customer analytics and building NLP sentiment analysis systems for 
-        <strong>25,000+ interactions monthly</strong>.
-        Expert at transforming complex data challenges into scalable AI solutions using Python, deep learning frameworks, and modern MLOps practices. Passionate about leveraging advanced AI technologies—including GPT-4, LangChain, LLM fine-tuning, and RAG architectures—to solve real-world problems and empower innovation across healthcare, finance, and customer experience domains.
+      <div class="professional-summary"> <strong>AI Engineer | ML Engineer | GenAI Engineer</strong> with 4+ years of experience designing, building, and deploying production-grade ML, Deep Learning, and Generative AI systems for enterprise clients across financial services, healthcare, and analytics domains. Currently working on multilingual GenAI assistants, agentic workflows, and RAG-based knowledge systems that support[1][2] <strong>1,000+ concurrent users</strong> with sub-100ms latency and <strong>99.2% uptime</strong> in Kubernetes-based cloud environments.[3][1]
+        Specialized in end-to-end machine learning pipelines—from data ingestion and feature engineering to model development, evaluation, and MLOps deployments on AWS, GCP, and Azure. Proven track record delivering high-impact solutions including cancer detection models achieving​​
+        <strong>97.7% ROC-AUC</strong> on large-scale medical imaging datasets and analytics pipelines that have driven
+        <strong>$2M+ in measurable business impact</strong> and
+        <strong>$180K revenue growth</strong> through financial and customer analytics.​​
+        Expert at transforming complex, ambiguous business problems into scalable AI products using Python, PyTorch, TensorFlow, FastAPI, and modern MLOps tooling (MLflow, Airflow, CI/CD, containerized deployment). Passionate about leveraging advanced AI technologies—including GPT‑4, LangChain, LLM fine-tuning (LoRA/QLoRA), agentic workflows, and RAG architectures—to build reliable, observable, and high-impact AI systems across banking, healthcare, and customer experience domains.​
       </div>
-
+      
       <h2>Contact Details</h2>
       <p>
         <strong>Email:</strong>
-        <a href="mailto:dhruvjoshi16dj@gmail.com">dhruvjoshi16dj@gmail.com</a>
+        <a href="mailto:dhruvjoshi16dj@gmail.com">dhruv@dhruvjoshi.co</a>
       </p>
       <p><strong>Phone:</strong> 382-882-0186</p>
       <p>
